[package]
authors = ["bunnie <bunnie@kosagi.com>"]
description = "A utility for porting semantic versions between build system and binary objects"
name = "xous-semver"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/betrusted-io/xous-semver/"
homepage = "https://betrusted.io/"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[features]
std = []
default = ["std"]